donations-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-donations-api-service 
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080 
  selector:
    name: spring-donations-api
