donations-api/kong-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donations-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-donations-api-service
            port:
              number: 80
# DEPRECATED VERSION
#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: donations-api
#  annotations:
#    kubernetes.io/ingress.class: kong
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /api
#        backend:
#          serviceName: spring-donations-api-service
#          servicePort: 80
